...
    <string name="electric">Elektrisk:</string>
    <string name="size">Størrelse:</string>
    <string name="start_date_label">Leie fra dato:</string>
    <string name="days_label">Antall dager:</string>
    <string name="total_price">Totalpris:</string>

    <string name="payment_title">Betaling</string>
    <string name="pay_now">Betal kr</string>
    <string name="payment_not_implemented">Betaling er ikke implementert</string>

    <string name="home">Hjem</string>
    <string name="back">Forrige</string>
    <string name="next">Fortsett</string>
...
